--- a/FinnishLanguageTrainer/src/app.css
+++ b/FinnishLanguageTrainer/src/app.css
@@ -1,79 +1,120 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  background-color: rgb(12, 12, 12);
+  color: white;
   text-align: center;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+a {
+  color: rgb(0, 200, 200);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.not {
+  margin-top: 0.1rem;
+}
+
+.nob {
+  margin-bottom: 0.1rem;
+}
+
+/* For the Buttons! */
+.button1 {
+  font-family: Georgia, serif;
+  background-color: rgb(25, 25, 25);
+  border: none;
+  width: 220px;
+  height: 40px;
+  border-radius: 15px;
+  font-size: 18px;
+  color: rgb(0, 200, 200);
+}
+
+/* Flexboxes */
+.containerMain {
+  gap: 40px;
+  margin: 20px;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.containerCol1 {
+  gap: 20px;
+  flex: none;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.containerCol1a {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.containerCol1b {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.containerCol3 {
+  gap: 20px;
+  flex: none;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.containerCol2 {
+  gap: 40px;
+  margin: 10px;
+  flex-grow: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+/* Images */
+.sizzle {
+  width: 220px;
+  border-radius: 20px;
+}
+
+/* Sidebar */
+.aside1 {
+  border-radius: 15px;
+  width: 200px;
+  text-align: center;
+  color: white;
+  padding: 10px;
+  background-color: rgb(25, 25, 25);
+}
+
+/*Links*/
+.link1,
+.link2 {
+  text-align: center;
+  border-radius: 15px;
+  width: 200px;
+  color: white;
+  padding: 10px;
+  line-height: 1.8;
+  background-color: rgb(25, 25, 25);
+}
+
+.main,
+.header,
+.aboutMe,
+.interests,
+.mentions {
+  border-radius: 15px;
+  padding: 10px;
+  height: auto;
+  background-color: rgb(25, 25, 25);
+}
+
+#linktext {
+  font-size: 18px;
 }
