--- a/src/app.css
+++ b/src/app.css
@@ -77,7 +77,7 @@ a {
 }
 
 /* Images */
-.sizzle {
+.pussypic {
   width: 220px;
   border-radius: 20px;
 }
@@ -111,6 +111,13 @@ a {
 .mentions {
   border-radius: 15px;
   padding: 10px;
+  height: auto;
+  background-color: rgb(25, 25, 25);
+}
+
+.practise {
+  border-radius: 15px;
+  padding: 20px;
   height: auto;
   background-color: rgb(25, 25, 25);
 }
